[package]
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
description = "Linux SocketCAN library. Send and receive CAN frames via CAN bus on Linux."
documentation = "https://docs.rs/socketcan"
license = "MIT"
name = "socketcan"
repository = "https://github.com/mbr/socketcan-rs"
version = "1.8.0"
edition = "2018"

[dependencies]
hex = "^0.4"
itertools = "^0.10"
libc = "^0.2"
nix = "^0.23"

[features]
vcan_tests = []
